@startuml
class AuthForm <<boundary>> {
  + submitLoginForm()
  - validateFields()
  - showError()
  - redirectToDashboard()
}

class AuthController <<control>> {
  + authenticate(request: AuthRequest)
}

class UserEntity <<entity>> {
  + validateCredentials(username: String, password: String)
  + getUsername(): String
  + getRole(): String
}

class AuthRequest <<dto>> {
  + username: String
  + password: String
}

class AuthResponse <<dto>> {
  + userId: Long
  + username: String
  + role: String
}

AuthForm --> AuthController
AuthController --> UserEntity
AuthController ..> AuthRequest
AuthController ..> AuthResponse
@enduml 